# simulink_automation

./: .gitignore  CMakeLists.txt.mako  HT09_Linear_Vehicle_Model.slxc  Tire_Model_Codegen.slxc  Tire_Model_Codegen_inport_info.json  clean.sh  flake.nix  gencode_v2.m  hytech_codegen_config.mat  hytech_codegen_config_no_halide.mat  hytech_codegen_config_r2.mat  json_to_proto.py  process_simulink_codegen.py  readme.md  savecodegenconfig.m  zipped_files.json
.github-proto/workflows/: gen_code.yaml
.github/workflows/: gen_code.yaml  test_reflection.yaml
State_Estimation/: MatlabMath.hpp.mako
State_Estimation/include/: MatlabMath.hpp.mako
Tire_Model_Codegen_ert_rtw/: CMakeLists.txt  Tire_Model_Codegen.h  Tire_Model_Codegen_manifest.txt  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  ert_main.cpp  rtw_proj.tmw
Tire_Model_Codegen_ert_rtw/tmwinternal/: simulink_cache.xml  tr
cmake/: codegenConfig.cmake.in  drivebrain_coreConfig.cmake.in  matlab_mathConfig.cmake.in
matlab_model/: EstimatorManager.hpp.mako  EstimatorOutputs.hpp.mako  MatlabControllerModelIntegration.cpp.mako  MatlabControllerModelIntegration.hpp.mako  MatlabEstimModel.hpp  MatlabEstimatorModelIntegration.cpp.mako  MatlabEstimatorModelIntegration.hpp.mako  MatlabModel.hpp  MatlabModelAddHelper.hpp.mako  MatlabModelIntegration.cpp.mako  MatlabModelIntegration.hpp.mako  MatlabModelProtoRegHelper.hpp.mako  model_input_include.mako
model_processing/: associateInportWithStructMemberNames.m  buildModel.m  getInportAreas.m
proto/: CMakeLists.txt.mako  estimation_msgs.proto.mako  json_to_proto.py
proto_outputs/: Tire_Model_Codegen_estimation_msgs.proto
slprj/_jitprj/: s5mwnRdUW51MJlCgVoAK9RE.l  s5mwnRdUW51MJlCgVoAK9RE.mat  sQ7LkFRqeyeujZFxTLr83q.l  sQ7LkFRqeyeujZFxTLr83q.mat  sUzS26YxovfNCm7NwWYxKUH.l  sUzS26YxovfNCm7NwWYxKUH.mat  sZ3dUqbKXnxYYV1OqFrFuj.l  sZ3dUqbKXnxYYV1OqFrFuj.mat  sbD5puAtyvYCb51qqmkrzwG.l  sbD5puAtyvYCb51qqmkrzwG.mat  sgB84XiYvguviwDqXkoWLXD.l  sgB84XiYvguviwDqXkoWLXD.mat  sjT7pRcYU9XPTLAaCgVumB.l  sjT7pRcYU9XPTLAaCgVumB.mat  slhxJDDLPNqkPgXdg2xent.l  slhxJDDLPNqkPgXdg2xent.mat  sxMu0A5tkHjoD7fnhr6cDVC.l  sxMu0A5tkHjoD7fnhr6cDVC.mat
slprj/_sfprj/EMLReport/: s5mwnRdUW51MJlCgVoAK9RE.mat  sQ7LkFRqeyeujZFxTLr83q.mat  sUzS26YxovfNCm7NwWYxKUH.mat  sZ3dUqbKXnxYYV1OqFrFuj.mat  sbD5puAtyvYCb51qqmkrzwG.mat  sgB84XiYvguviwDqXkoWLXD.mat  sjT7pRcYU9XPTLAaCgVumB.mat  slhxJDDLPNqkPgXdg2xent.mat  sxMu0A5tkHjoD7fnhr6cDVC.mat
slprj/_sfprj/HT09_Linear_Vehicle_Model/_self/rtw/ert/info/: binfo.mat
slprj/_sfprj/HT09_Linear_Vehicle_Model/_self/sfun/info/: binfo.mat
slprj/_sfprj/Tire_Model_Codegen/: amsi_serial.mat
slprj/_sfprj/Tire_Model_Codegen/_self/rtw/ert/info/: binfo.mat
slprj/_sfprj/Tire_Model_Codegen/_self/sfun/info/: binfo.mat
slprj/_sfprj/precompile/: 8QG82CbCdzNSgmsMZuFEv.mat  8pQlXu0FLJQbSYcrgUWBDF.mat  DWX2PIbcfeC4QhoA1sELEH.mat  S9BjsH4A8JjgwLAzCZcrvD.mat  UyBOZ8XwUUqPXoWcbWbFyE.mat  cSOo4QhYG4gxw43wDcQWDB.mat  ctijSxnjdb2TYxQyAoCq4B.mat  k1BnDcsN2tyn30HYjqPWKG.mat  pegPyZCDtmEI6eUU8a3Sv.mat  ucwSZTfg7jRCI0dvWqv2N.mat  wkV5QekCxEeyzmAjmzDUiE.mat  z0UjjLKyhdnDNObiA1zIyE.mat
slprj/ert/HT09_Linear_Vehicle_Model/: CMakeLists.txt  HT09_Linear_Vehicle_Model_mr_codeInfo.mat  HT09_Linear_Vehicle_Model_private.h  buildInfo.mat  codedescriptor.dmr  compileInfo.mat  rtw_proj.tmw
slprj/ert/HT09_Linear_Vehicle_Model/tmwinternal/: BlockTraceInfo.mat  ModelRefCompileInfo.xml  binfo_mdlref.mat  minfo_mdlref.mat  simulink_cache.xml  tr
slprj/ert/Tire_Model_Codegen/tmwinternal/: BlockTraceInfo.mat  CompileInfo.xml  binfo.mat  minfo.mat
slprj/ert/_sharedutils/: CMakeLists.txt  buildInfo.mat  checksummap.mat  const_params.cpp  filemap.mat  look1_binlcapw.cpp  maximum_kQ2v6WLV.cpp  maximum_kQ2v6WLV.h  minimum_5X1FIofZ.cpp  rtGetInf.h  rtGetNaN.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat  shared_file.dmr
slprj/sim/varcache/HT09_Linear_Vehicle_Model/: checksumOfCache.mat  varInfo.mat
slprj/sim/varcache/HT09_Linear_Vehicle_Model/tmwinternal/: simulink_cache.xml
slprj/sim/varcache/Tire_Model_Codegen/: checksumOfCache.mat  varInfo.mat
slprj/sim/varcache/Tire_Model_Codegen/tmwinternal/: simulink_cache.xml
test/: Tire_Model_Codegen_MatlabModel.hpp
